package ar.edu.utn.frba.ddsi.notificaciones.models.enums;

public enum EstadoNotificacion {
  PENDIENTE,
  COMPLETADA
}
