package ar.edu.utn.frba.ddsi.notificaciones.models.enums;

public enum MedioNotificacion {
  EMAIL,
  SMS,
  WHATSAPP
}
